change some image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3686,31 +3686,31 @@ Page Title Area CSS
 }
 
 .page-title-area.item-bg-1 {
-  background-image: url(../img/page-title/bg-1.jpg);
+  background-image: url(../img/page-title/bg.jpg);
 }
 
 .page-title-area.item-bg-2 {
-  background-image: url(../img/page-title/bg-2.jpg);
+  background-image: url(../img/page-title/bg.jpg);
 }
 
 .page-title-area.item-bg-3 {
-  background-image: url(../img/page-title/bg-3.jpg);
+  background-image: url(../img/page-title/bg.jpg);
 }
 
 .page-title-area.item-bg-4 {
-  background-image: url(../img/page-title/bg-4.jpg);
+  background-image: url(../img/page-title/bg.jpg);
 }
 
 .page-title-area.item-bg-5 {
-  background-image: url(../img/page-title/bg-5.jpg);
+  background-image: url(../img/page-title/bg.jpg);
 }
 
 .page-title-area.item-bg-6 {
-  background-image: url(../img/page-title/bg-6.jpg);
+  background-image: url(../img/page-title/bg.jpg);
 }
 
 .page-title-area.item-bg-7 {
-  background-image: url(../img/page-title/bg-7.jpg);
+  background-image: url(../img/page-title/bg.jpg);
 }
 
 .page-title-area::before {
